@@ -64,6 +64,8 @@ namespace Orthanc
       return element_;
     }
 
+    const char* GetMainTagsName() const;
+
     bool operator< (const DicomTag& other) const;
 
     bool operator== (const DicomTag& other) const
